--- a/now.json
+++ b/now.json
@@ -2,6 +2,6 @@
   "version": 2,
   "name": "webrtc",
   "builds": [
-    { "src": "server.js", "use": "@now/node" }
+    { "src": "server.js", "use": "node" }
   ]
 }
